--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -1122,7 +1122,7 @@ p {
         grid-area: sobre-mim;
         background-color: #212428;
         border-bottom: solid 0.1px rgb(0, 0, 0);
-        background-color: #f3407c;
+
 
     }
 
@@ -1338,6 +1338,20 @@ p {
         box-sizing: border-box;
 
     }
+
+.right-header{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-header{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
     .photoshop {
         display: flex;
@@ -1578,28 +1592,27 @@ p {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 20%;
-        padding: 20px 40px;
+        width: 15%;
+        padding: 15px;
         border-right: 1px solid #0f1113;
     }
 
     .logo-empresa {
+        
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
+        border-radius: 20px;
         background-color: aliceblue;
         transition: transform 0.5s;
         box-shadow: 5px 10px 20px rgb(12, 12, 12);
         box-sizing: border-box;
-        overflow: hidden;
+
     }
 
     .logo-empresa>img {
-        width: 70%;
-        height: 70%;
+        width: 90%;
+        height: 90%;
         object-fit: contain;
         object-position: center;
 
@@ -1614,7 +1627,7 @@ p {
         flex-direction: column;
         justify-content: center;
         align-items: left;
-        width: 60%;
+        width: 70%;
         padding-left: 10px;
         gap: 10px;
         border-left: 1px solid #2c2f33;
@@ -1640,7 +1653,7 @@ p {
     .caixa-exp-right {
         display: flex;
         align-items: center;
-        width: 20%;
+        width: 15%;
         padding-right: 40px;
 
     }
@@ -1675,7 +1688,7 @@ p {
         border-bottom: solid 0.1px rgb(0, 0, 0);
         gap: 15px;
         box-sizing: border-box;
-        
+
 
     }
 
@@ -1700,7 +1713,7 @@ p {
         padding: 15px;
         gap: 40px;
         box-sizing: border-box;
-        
+
 
 
     }
@@ -1924,7 +1937,7 @@ p {
         max-width: 1400px;
         box-sizing: border-box;
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         justify-content: center;
         width: 100%;
         gap: 40px;
@@ -2200,14 +2213,14 @@ p {
 
 
     .animar {
-        animation-name: animar-texto, display-bar;
+        display: inline;
+        animation-name: animar-texto;
         animation-duration: 4s, 500ms;
         animation-iteration-count: infinite;
         animation-direction: normal;
         box-sizing: border-box;
         overflow: hidden;
         white-space: nowrap;
-        border-right: 2px solid rgb(255, 1, 79);
         padding: 0px;
     }
 
@@ -2250,13 +2263,5 @@ p {
     }
 
 
-    @keyframes display-bar {
-        from {
-            border-right: none;
-        }
 
-        to {
-            border-right: 2px solid rgb(255, 1, 79);
-        }
-    }
 }
