--- a/lol/css/index.css
+++ b/lol/css/index.css
@@ -929,7 +929,7 @@ nav {
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        gap: 20px;
+        gap: 10%;
         padding-right: 10px;
     }
     
