--- a/lol/css/index.css
+++ b/lol/css/index.css
@@ -1048,6 +1048,7 @@ nav {
         align-items: center;
         width: 100%;
         height: 25%;
+        padding: 5px;
     }
     
     .nav-left {
@@ -1065,7 +1066,7 @@ nav {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 15px;
+        gap: 5px;
         padding: 10px;
         box-sizing: border-box;
         overflow: hidden;
@@ -1083,7 +1084,7 @@ nav {
         overflow: hidden;
         box-shadow: -5px 10px 30px rgba(0, 0, 0, 0.2);
         transition: filter 300ms;
-        border-radius: 20px;
+        border-radius: 10px;
         left: -225px;
         padding: 2px;
         background-image: linear-gradient(rgba(4, 151, 139, 0), rgba(4, 151, 139, 0.5));
@@ -1103,13 +1104,12 @@ nav {
     }
     
     .champ-rotation-name {
-    
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         position: absolute;
         color: aliceblue;
-        font-size: 0.7rem;
+        font-size: 0.5rem;
         left: 15px;
         bottom: 10px;
         text-shadow: 1px 5px 5px black;
