--- a/lol/css/index.css
+++ b/lol/css/index.css
@@ -991,11 +991,11 @@ nav {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
         width: 100%;
         height: 75%;
         color: aliceblue;
-        padding: 100px 50px;
+        padding: 100px 20px;
         box-sizing: border-box;
         overflow: hidden;
     
@@ -1028,7 +1028,7 @@ nav {
     }
     
     .infos>h1 {
-        font-size: 6rem;
+        font-size: 5rem;
         font-family: 'League Spartan', sans-serif;
     
     }
@@ -1036,7 +1036,7 @@ nav {
     .infos>h3 {
         font-size: 1rem;
         font-weight: 100;
-        max-width: 40rem;
+        max-width: 20rem;
     
     
     
