--- a/lol/css/index.css
+++ b/lol/css/index.css
@@ -1339,9 +1339,7 @@ nav {
         animation-delay: 300ms;
         opacity: 0;
         animation-fill-mode: forwards;
-    
-    
-    
+z-index: 20;
     }
     
     @keyframes fadeInfo {
