--- a/css/gkanban.css
+++ b/css/gkanban.css
@@ -9,10 +9,11 @@
 
 body {
     height: 100vh;
-    background: url("https://rare-gallery.com/uploads/posts/5410610-nature-waterfall-cliff-wallpaper-nature-wallpapers-nature-backgrounds-rainforest-rock-cascade-mountain-rocky-mountain-rocky-cliff-rocky-watrfall-low-ngle-low-angle-perspective-geen-green-green.jpg");
-    background-position: center;
-    background-repeat: none;
+    background: url("../imagens/background-kanban.svg");
+    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
+    background-repeat:repeat;
     box-sizing: border-box;
 }
 
@@ -125,22 +126,14 @@ body {
     cursor: pointer;
 }
 
-.header-destaque {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 150px;
-    color: white;
 
-}
 
 .coluna .header-destaque {
     display: flex;
     width: 100%;
     height: 150px;
     color: white;
-    background-color: rgb(127, 209, 230);
+    background-color: rgb(255, 253, 143);
     box-sizing: border-box;
 
 
