--- a/css/gkanban.css
+++ b/css/gkanban.css
@@ -133,7 +133,7 @@ body {
     width: 100%;
     height: 150px;
     color: white;
-    background-color: rgb(255, 253, 143);
+    background-color: #fffd8f;
     box-sizing: border-box;
 
 
