--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -36,6 +36,17 @@ header {
 
 }
 
+.menu-mobile {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 35px;
+    height: 35px;
+    box-sizing: border-box;
+    overflow: hidden;
+
+}
+
 .icons-header {
     display: flex;
     justify-content: center;
@@ -1126,6 +1137,17 @@ p {
 
     }
 
+    .menu-mobile {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        width: 35px;
+        height: 35px;
+        box-sizing: border-box;
+        overflow: hidden;
+
+    }
+
 }
 
 @media screen and (max-width: 767px) {
@@ -1147,9 +1169,110 @@ p {
 
     }
 
-    nav>a,
-    nav>div>p {
+    .menu-mobile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 35px;
+        height: 35px;
+        box-sizing: border-box;
+        overflow: hidden;
+        
+
+    }
+
+
+
+    #check-menu {
+        width: 100%;
+        height: 100%;
         display: none;
+        background-color: #f3407c;
+    }
+
+    label {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        transition: all 300ms ease-in-out;
+
+    }
+
+    label>span:nth-child(1) {
+        position: relative;
+        width: 100%;
+        height: 4px;
+        background-color: #ffffff;
+        border-radius: 20px;
+        transition: all 300ms ease-in-out;
+    }
+
+    label>span:nth-child(2) {
+        width: 100%;
+        position: relative;
+        height: 4px;
+        background-color: #ffffff;
+        border-radius: 20px;
+        transition: all 100ms ease-in-out;
+    }
+
+    label>span:nth-child(3) {
+        width: 100%;
+        position: relative;
+        height: 4px;
+        background-color: #ffffff;
+        border-radius: 20px;
+        transition: all 300ms ease-in-out;
+    }
+
+    #check-menu:checked+label>span:nth-child(1) {
+        transform: rotate(-45deg);
+        top: 10px;
+        background-color: rgb(255, 1, 79);
+    }
+
+    #check-menu:checked+label>span:nth-child(2) {
+        opacity: 0;
+    }
+
+    #check-menu:checked+label>span:nth-child(3) {
+        top: -9px;
+        transform: rotate(45deg);
+        background-color: rgb(255, 1, 79);
+    }
+
+    .menu {
+        top: 0px;
+        width: 30%;
+        height: 100vh;
+        display: none;
+        justify-content: center;
+        flex-direction: column;
+        align-items: flex-end;
+        position: absolute;
+        right: 0px;
+        gap: 10px;
+        padding: 15px;
+        background-color: rgba(15, 17, 19, 0.5);
+        backdrop-filter: blur(10px);
+        animation-name: menu-slide;
+        animation-duration: 1s;
+        animation-direction: alternate;
+        
+
+    }
+
+    @keyframes menu-slide {
+        from {
+            transform: translateX(200px);
+        }
+
+        to {
+            transform: translateX(0px);
+        }
     }
 
     .icons-header {
@@ -1339,19 +1462,19 @@ p {
 
     }
 
-.right-header{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .right-header {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
-.left-header{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    .left-header {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
     .photoshop {
         display: flex;
@@ -1595,17 +1718,18 @@ p {
         width: 15%;
         padding: 15px;
         border-right: 1px solid #0f1113;
+        background-color: aliceblue;
     }
 
     .logo-empresa {
-        
+
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 20px;
         background-color: aliceblue;
         transition: transform 0.5s;
-        box-shadow: 5px 10px 20px rgb(12, 12, 12);
+        box-shadow: none;
         box-sizing: border-box;
 
     }
@@ -1637,6 +1761,14 @@ p {
         font-weight: 200;
         font-size: 1em;
         color: aliceblue;
+    }
+
+    .caixa-exp-center>h2 {
+        font-size: 0.8em;
+    }
+
+    .caixa-exp-center>h4 {
+        font-size: 0.8em;
     }
 
     .ano-destaque {
@@ -2145,14 +2277,7 @@ p {
 
     }
 
-    .menu {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 40px;
 
-
-    }
 
     a {
         color: rgb(203, 214, 223);
