--- a/css/folhaDeEstilo.css
+++ b/css/folhaDeEstilo.css
@@ -1774,8 +1774,8 @@ p {
         flex-direction: column;
         justify-content: center;
         align-items: left;
-        width: 70%;
-        padding-left: 10px;
+        width: 80%;
+        padding-left: 20px;
         gap: 10px;
         border-left: 1px solid #2c2f33;
     }
@@ -1806,7 +1806,7 @@ p {
     }
 
     .caixa-exp-right {
-        display: flex;
+        display: none;
         align-items: center;
         width: 15%;
         padding-right: 40px;
