--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -15,7 +15,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(126, 97, 86);
+    background: url("../imagens/calc-bg.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     box-sizing: border-box;
 }
 
@@ -30,7 +33,8 @@
     border-radius: 15px;
     box-sizing: border-box;
     overflow: hidden;
-    box-shadow: -20px 10px 30px rgba(0,0,0,30%);
+    box-shadow: -0px 0px 50px rgba(0,0,0,30%);
+    border: outset 1px rgb(240, 80, 101);
     
 }
 
@@ -150,8 +154,6 @@
     padding: 10px;
     font-size: 1.4em;
 
-
-
 }
 
 .botoes {
@@ -196,13 +198,16 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    width: 450px;
-    height: 300px;
+    max-width: 350px;
+    max-height: 250px;
+    width: 80%;
+    height: 80%;
     border-radius: 15px;
     gap: 50px;
     backdrop-filter: blur(5px);
-    background-color: rgba(24, 22, 22, 80%);
+    background-color: rgba(240, 80, 101,0.7);
     color: aliceblue;
+    
 }
 
 .mensagens button{
@@ -213,12 +218,13 @@
     background-color: brown;
     color: aliceblue;
     transition: transform 1s;
+    box-shadow: 0px 5px 20px rgb(122, 21, 34);
 }
 
 .mensagens button:hover{
     background-color: aliceblue;;
     color: rgb(0, 0, 0);
-    transform: translateY(-5px)
+    
 }
 
 
@@ -231,4 +237,41 @@
     position: absolute;
     bottom: 10px;
     color: rgb(29, 18, 18);
+}
+
+@media screen and (max-width: 767px){ 
+    .calculadora {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: rgb(22, 22, 22);
+        width: 100%;
+        height: 100%;
+        border-radius: 0px;
+        box-sizing: border-box;
+        overflow: hidden;
+        box-shadow: -0px 0px 50px rgba(0,0,0,30%);
+        border: outset 1px rgb(240, 80, 101);
+        
+    }
+
+    .botoes-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        width: 100%;
+        height: 60%;
+        display: grid;
+        align-items: center;
+        justify-items: center;
+        grid-template-columns: repeat(4, 95px);
+        grid-template-rows: repeat(5, 80px);
+        background-color: rgb(24, 22, 22);
+        padding: 10px;
+        font-size: 1.4em;
+    
+    }
+    
 }
